package com.gorden5566.learn.pattern.manual.interpreter.demo;

/**
 * @author gorden5566
 * @date 2019-02-13
 */
public class Context {

}
