package com.gorden5566.learn.pattern.manual.interpreter.demo.expression;

import com.gorden5566.learn.pattern.manual.interpreter.demo.Context;

/**
 * @author gorden5566
 * @date 2019-02-13
 */
public class TerminalExpression extends Expression {
    @Override
    public Object interpreter(Context context) {
        return null;
    }
}
